# nddata

./: .gitignore  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: lockdown.yml
include/ndd/: ndarray.hpp  nddata.hpp  ndtype.hpp
uml/: nddata.xml
